[11.22] released ...
* In threaded mode, the thread structure is now shown using line-drawing
  characters in the header summary.
* When using a hostname with a port number attached with SMTP STARTTLS,
  strip the port number for correct host name verification (Bugreport by
  Gary E. Rafe).

[11.21] released 2/19/05
* When mail is sent using SMTP, 'Bcc:' fields are not passed to the
  server anymore (Bugreport by Matthew Fischer.)
* When replying to a message part for which a 'pipe-type/subtype'
  variable was set, quotes were inserted in the text sent to the pipe
  instead of in the output received from it (since v. 11.14 or so).
* A message that is already marked as answered is not marked again if
  it is replied to and the 'markanswered' variable is set.
* Nail no longer generates an error if renaming a message in a maildir
  folder fails because both the old and the new link have the same name
  (i.e. if the rename operation was superfluous).
* The new 'sendcharsets' variable was incorrectly named 'charsets' in
  nail.rc in the last version. If nail 11.20 was the first version of
  nail you ever installed, you should correct this by hand since the
  file is not overwritten by 'make install'. (Bugreport by Matthew
  Fischer.)
* Mozilla NSS error reports are more detailed now.
* For the 'touch', 'mbox', 'unread', and 'new' commands, a following 'next'
  command will advance to the next message as if the current one had been
  printed, as it has been the case with traditional mailx (Bugreport by
  Michael Sipser).
* Files in maildir folders are now read in the order obtained from
  readdir().
* When the variables 'sign' or 'Sign' are set to the empty string, they
  are treated as if they had been unset for the '~a' or '~A' commands.

[11.20] released 1/13/05
* A 'forward-as-attachment' variable has been introduced. If it is set,
  the 'forward' command uses a MIME 'message/rfc822' attachment for the